gcc/testsuite/rust/rustc/ui/suggestions/suggest-full-enum-variant-for-local-module_dg.rs
mod option {
    pub enum O<T> {
        Some(T),
        None,
    }
}

fn main() {
    let _: option::O<()> = (); // { dg-error ".E0308." "" { target *-*-* } }
}

